Bug 164267 - Feed properties dialog does not default to OK when pressing Enter
Summary: Feed properties dialog does not default to OK when pressing Enter
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-17 10:12 UTC by Marcus Better
Modified: 2008-08-19 17:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Better 2008-06-17 10:12:28 UTC
Version:           1.2.50 (using 4.00.80 (KDE 4.0.80 >= (KDE 4.1 Beta1), Debian packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.25-melech

When bringing up the Feed Properties dialog by selecting "Edit Feed" from the context menu of a feed in the feed list, editing the Name field, and pressing Enter, the changes are not saved. Instead the OK button has to be pressed.

I think OK should be the default action here, not Cancel.
Comment 1 Teemu Rytilahti 2008-08-19 17:45:39 UTC
Changed.

SVN commit 849458 by rytilahti:

set Ok to be default for feedproperties dialog so one can use enter to accept it.

BUG:164267