set Ok to be default for feedproperties dialog so one can use enter to accept it.

BUG:164267

svn path=/trunk/KDE/kdepim/akregator/; revision=849458